name:                qt
version:             1.0
synopsis:            QT version 3.14159, an IRC bot with dice-rolling features
homepage:            http://github.com/IreneKnapp/qt
license:             BSD3
license-file:        LICENSE
author:              Irene Knapp <irene.knapp@icloud.com>
maintainer:          Irene Knapp <irene.knapp@icloud.com>
copyright:           Copyright 2013 Irene Knapp.
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable qt
  main-is:             Main.hs
  build-depends:       base ==4.5.*
  hs-source-dirs:      Haskell

