name:                qt
version:             1.0
synopsis:            QT version 3.14159, an IRC bot with dice-rolling features
homepage:            http://github.com/IreneKnapp/qt
license:             BSD3
license-file:        LICENSE
author:              Irene Knapp <irene.knapp@icloud.com>
maintainer:          Irene Knapp <irene.knapp@icloud.com>
copyright:           Copyright 2013 Irene Knapp.
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable qt
  main-is:             Main.hs
  other-modules:       Configuration,
                       Import,
                       Settings,
                       Types
  build-depends:       base == 4.5.*,
                       bytestring >= 0.9.2.1 && < 1.0,
                       containers >= 0.4.2.1 && < 1.0,
                       monad-logger >= 0.3.1.1 && < 1.0,
                       text >= 0.11.3.1 && < 1.0,
                       unordered-containers >= 0.2.3.2 && < 1.0,
                       vector >= 0.10.0.1 && < 1.0,
                       yaml >= 0.8.4.1 && < 1.0
  hs-source-dirs:      Haskell
  extensions:          OverloadedStrings,
                       TemplateHaskell
